--- a/.github/workflows/pr-analysis.yml
+++ b/.github/workflows/pr-analysis.yml
@@ -7,12 +7,15 @@ on:
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'  # or '18' if you prefer
+        node-version: '16'  # or '18' if you prefer
     - name: Install dependencies
       run: npm ci
     - name: Compile TypeScript
